# heyoh

./: CMakeLists.txt
C++/实验/: 实验1(1).cpp  实验1(2).cpp  实验2(1).cpp  实验2(2).cpp  实验3(1).cpp  实验3(5).cpp  实验5(1).cpp  实验6.cpp  实验7(1).cpp  实验7(2).cpp  实验8.cpp  讲义.doc
C++/第11章 流类库与输入输出/: 把文件读出.cpp
C++/第3章 函数/: 内联函数.cpp  引用传参实现两数交换.cpp  递归函数算数中最小数.cpp
C++/第4章 类与对象/: 复制构造函数.cpp  构造函数.cpp  矩形,根据坐标算面积.cpp  类的组合.cpp
C++/第5章 数据的共享与保护/: 类的友元-友元函数.cpp  类的静态成员-静态函数及数据成员.cpp
C++/第6章 数组、指针与字符串/: 矩阵相加.cpp
C++/第7章 继承与派生/: 类型兼容规则.cpp
C/实验/: 九九表(上三角).cpp  九九表(下三角).cpp  九九表(算式).cpp  九九表(结果).cpp  因数.cpp  字符串ASCII码值的比较(指针法).cpp  字符串ASCII码值的比较.cpp  字符串按ASCII码值排序(指针法).cpp  字符串按ASCII码值排序.cpp  实验5(6).cpp  实验8(1).cpp  实验9(1).cpp  建单向链表并对任意节点做删除操作.cpp  数增后的重新排序.cpp  数的指定交换.cpp  数的排序.cpp  数的逆序.cpp  矩阵转置.cpp  算矩阵中最大数及其位置.cpp  算素数.cpp  讲义.docx  输入学生信息,算出平均分,一并存到文件,再输入学号,在屏幕显示该生信息.cpp  输入数据,存到新建文件,再将文件中内容读出到屏幕,并将其中小写字母变成大写字母输出到屏幕.cpp  递归算阶乘.cpp
C/第10章 字符串/: 字符串的复制.cpp  字符串的连接(指针法).cpp  字符串的连接.cpp  字符串长度.cpp  遇空格scanf认为结束...cpp  遇空格scanf认为结束.cpp
C/第11章 指针和数组/: 数组与指针(行指针).cpp
C/第12章 结构体和共用体/: 结构体指针..cpp  结构体指针.cpp  结构体数组.cpp
C/第6章 循环控制结构/: 当型循环,取余,除法.cpp
C/第7章 函数/: 静态变量.cpp
C/第8章 数组/: 数组传参.cpp
C/第9章 指针/: 指针.......cpp  指针......cpp  指针.....cpp  指针....cpp  (+3 more)
OS/: 实验1&2&3&5.cpp  实验4.cpp  讲义.doc  银行家算法.cpp
acm/: paizhao.cpp  strlength.cpp
algorithm/: algorithm.cpp  stackqueue.cpp  vectorheap.cpp
datastructure/: 实验1.cpp  实验2.cpp  实验3.cpp  实验4.cpp  实验5.cpp  实验6.cpp  实验7.cpp  实验8.cpp
softwaretest/: triangle.cpp
数值分析/: 实验1.cpp  实验2.cpp  实验3.cpp  实验4.cpp  实验5.cpp  实验6.cpp  讲义.doc
(+49 files in other folders)
